# nexus

./: Cargo.toml  README.md
src/: args.rs  lib.rs  main.rs
src/commands/: create.rs  link.rs  mod.rs
src/errors/: mod.rs
src/models/: metadata.rs  mod.rs  note.rs
src/utils/: mod.rs
